Added index.html page

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blogs</title>
+        <title>Build-a-blog</title>
         <style type="text/css">
 
         </style>
     </head>
     <body>
-        <h1>
-            Blogs
-        </h1>
 
         {% block content %}
         {% endblock %}
