Added newpost.html page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 {% block content %}
 
     <h1>
-        <a href="/blog"> Blogs! </a>
+        <a href="/blog"> Blogs! </a> <br><br>
+        <a href="/newpost"> New Post! </a>
     </h1>
 
 {% endblock %}
