--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -4,7 +4,7 @@
 
     <h1> New Post! </h1>
 
-    <form method="post" action="/mainblog">
+    <form method="post">
 
         <label> Subject: </label> <br>
         <input type="text" value="{{ title }}" name="title" />
@@ -12,11 +12,11 @@
         <br> <br>
 
         <label> Blog: </label> <br>
-        <textarea name="blog"> {{ blog }} </textarea>
+        <textarea name="blog">{{blog}}</textarea>
 
         <br> <br>
 
-        <input type="submit" />
+        <input type="submit" value="Submit" />
     </form>
 
 {% endblock %}
