Fixed new post page with errors

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -8,13 +8,13 @@
 
         <label> Subject: </label> <br>
         <input type="text" value="{{title}}" name="title" />
-        <p class="error"></p>
+        <p class="error">{{err_title}}</p>
 
         <br> <br>
 
         <label> Blog: </label> <br>
         <textarea name="blog">{{blog}}</textarea>
-        <p class="error"></p>
+        <p class="error">{{err_blog}}</p>
 
         <br> <br>
 
