Some work done on database

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
     <h1>
         <a href="/blog"> Blogs! </a> <br><br>
-        <a href="/newpost"> New Post! </a>
+        <a href="/blog/newpost"> New Post! </a>
     </h1>
 
 {% endblock %}
