--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,12 @@
     <head>
         <title>Build-a-blog</title>
         <style type="text/css">
+            body {
+                font-family: sans-serif;
+                width: 800px;
+                margin: 0 auto;
+                padding: 10px;
+            }
             form {
                 background-color: #eee;
                 padding: 20px;
