Alot more work done

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Build-a-blog</title>
-        <style type="text/css">
+        <style>
             body {
                 font-family: sans-serif;
                 width: 800px;
