--- a/templates/mainblog.html
+++ b/templates/mainblog.html
@@ -5,7 +5,7 @@
     <h1>Blogs!</h1>
     {% for x in post %}
 
-        <h2><a href="/blog/{{x.id}}">{{x.title}} </a></h2>
+        <h2><a href="/blog/{{x.key().id()}}">{{x.title}} </a></h2>
         <p>{{x.blog}} </p>
 
     {% endfor %}
