--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-    {{ post.render() }}
+    
+    <h2>{{post.title}} </h2>
+    <p>{{post.blog}} </p>
 
 {% endblock %}
