--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,10 @@
     </head>
     <body>
 
+        <nav>
+            <h2><a href="/blog">home</a>&nbsp;&nbsp; | &nbsp;&nbsp;<a href="/blog/newpost">new post</a> </h2>
+        </nav>
+
         {% block content %}
         {% endblock %}
 
