--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,33 @@
             p.error {
                 color: red;
             }
+
+            .post + .post {
+                margin-top: 15px;
+            }
+
+            .post-heading {
+                position: relative;
+                border-bottom: 3px solid #666;
+            }
+
+            .post-title {
+                font-size: 24px;
+                font-weight: bold;
+            }
+
+            .post-date {
+                position: absolute;
+                right: 0px;
+                bottom: 0px;
+                color: #999;
+
+            }
+
+            .post-content {
+                margin-top: 5px;
+            }
+
         </style>
     </head>
     <body>
