Fixed date and time on pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,14 @@
                 font: 16px sans-serif;
                 border-radius: 10px;
             }
+            #blog {
+                background-color: #eee;
+                padding: 20px;
+                margin: 0 auto;
+                width: 700px;
+                font: 16px sans-serif;
+                border-radius: 10px;
+            }
             textarea {
                 margin: 10px 0;
                 width: 540px;
